# secdec

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  ChangeLog  MANIFEST.in  Makefile  Makefile.am  README  README.MD  README.md  SConstruct  build-release.sh  configure.ac  pyproject.toml  requirements.txt  setup.py
.github/workflows/: fast-check.yml  full-check.yml
contrib/: .gitignore  README
dist_template/: Makefile  README  qmc.hpp
doc/: Makefile  requirements.txt  setup.py
doc/source/: conf.py  faq.rst  full_reference.rst  generated_cpp.rst  generated_cpp.txt  gettingstarted.rst  index.rst  installation.rst  overview.rst  quickstart.rst  references.rst  util.rst
examples/: Hypergeo5F4.py  box1L.py  box2l.py  decompose_subtract_and_expand_loop_integral.py  difference.py  draft_run_card.py  elliptic_I1.py  elliptic_I2.py  elliptic_I3.py  example_run_card_general.py  example_run_card_loop.py  explicit_UF_decompose_subtract_and_expand_loop_integral.py  formfactor4L.py  kinematics.input  multiple_points_example.py  prof.out  triangle.py  triangle2L.py  two_regulators.py
examples/4photon/: 4y_box.py  4y_bubble.py  Makefile  Makefile.conf  amp.cpp  yyyy_bubble.py
examples/4photon1L/: yyyy_box6Dim.py
examples/4photon1L_amplitude/: Makefile  yyyy_box6Dim.py  yyyy_bubble.py
examples/HZ2L_nonplanar/: generate_HZ2L_nonplanar.py  integrate_HZ2L_nonplanar.py
examples/Hypergeo5F4/: Hypergeo5F4.py  integrate_5F4.py
examples/Nbox2L_split/: generate_Nbox2L_split_a.py  generate_Nbox2L_split_b.py  generate_Nbox2L_split_c.py  integrate_Nbox2L_split_a.py  integrate_Nbox2L_split_b.py  integrate_Nbox2L_split_b_disteval.py  integrate_Nbox2L_split_c.py  readme.md
examples/Zbb_vertex_correction/: N3.py  integrate_N3.py
examples/banana_3mass/: generate_banana_3mass.py  integrate_banana_3mass.py  integrate_banana_3mass_disteval.py
examples/box1L/: box1L.py  generate_box1L.py  integrate_box1L.py  integrate_box1L_disteval.py  integrate_box1L_multiple_points.py  kinematics.input  multiple_kinematic_points.py
examples/box1L_ebr/: generate_box1L_ebr.py  integrate_box1L_ebr.py
examples/box1L_expansion_by_regions/: generate_box1L_expansion_by_regions.py  integrate_box1L_expansion_by_regions.py
examples/box2L_numerator/: Makefile  box2L_contracted_tensor.py  box2L_invprop.py  integrate_box2L.cpp
examples/bubble1L_dotted_ebr/: generate_bubble1L_dotted_ebr.py  generate_bubble1L_dotted_m_ebr.py  generate_bubble1L_dotted_z_ebr.py  integrate_bubble1L_dotted_ebr.py  integrate_bubble1L_dotted_m_ebr.py  integrate_bubble1L_dotted_z_ebr.py
examples/bubble1L_dotted_expansion_by_regions/: generate_bubble1L_dotted_expansion_by_regions.py
examples/bubble1L_ebr/: README.md  generate_bubble1L_ebr_large_mass.py  generate_bubble1L_ebr_small_mass.py  integrate_bubble1L_ebr_large_mass.py  integrate_bubble1L_ebr_small_mass.py
examples/bubble1L_expansion_by_regions/: README.md  generate_bubble1L_expansion_by_regions_large_mass.py  generate_bubble1L_expansion_by_regions_small_mass.py  (+2 more)
form_derive/: bla.frm
form_optimization/: abbrev  bla.frm  expr
high_level_tests/: Makefile  README
mathematica_numerator/: UF.nb
nodist_examples/: box2L_numerator_hard.py  formfactor4L.py  pentabox2L.py
pySecDec/: __init__.py  algebra.py  amplitude_interface.py  code_writer.py  configure.py  cpp_tools.py  decomposition.py  deval.py  disteval.py  disteval_benchmark.py  dworker.py  expansion.py  formset.py  generating_vectors.py  integral_interface.py  loop_integral.py  make_package.py  make_regions.py  make_sum_package.py  matrix_sort.py  metadata.py  misc.py  polynomial.py  polytope.py  region_expand.py  sector.py  subtraction.py  test_algebra.py  test_amplitude_interface.py  test_code_writer.py  test_cpp_tools.py  test_decomposition.py  test_expansion.py  test_integral_interface.py  test_loop_integral.py  test_make_regions.py  test_matrix_sort.py  test_misc.py  test_polynomial.py  test_polytope.py  (+5 more)
pySecDecContrib/: README  SConscript  __init__.py  __main__.py  cln-1.3.4.list  cln-1.3.4.tar.bz2  cln-1.3.6.tar.bz2  cln-1.3.7.tar.bz2  exparse.hpp  ginac-1.7.6.list  ginac-1.7.6.tar.bz2  ginac-1.8.0.list  ginac-1.8.0.tar.bz2  ginac-1.8.3.list  ginac-1.8.3.tar.bz2  ginac-1.8.4.tar.bz2  ginac-1.8.6.tar.bz2  ginac-1.8.7.tar.bz2  ginac-1.8.9.tar.bz2  gmp-6.2.1.list  gmp-6.3.0.list  gmp-6.3.0.tar.bz2  gsl-2.5.list  gsl-2.7.1.list  gsl-2.8.list  qmc.hpp
pySecDecContrib/util/: Makefile.am  configure.ac
pySecDecContrib/util/secdecutil/: amplitude.hpp  coefficient_parser.hpp  deep_apply.hpp  ginac_coefficient_parser.hpp  integrand_container.hpp  pylink.hpp  pylink_amplitude.hpp  pylink_integral.hpp  sector_container.hpp  series.hpp  uncertainties.hpp
pySecDecContrib/util/secdecutil/integrators/: cquad.hpp  cuba.hpp  integrator.hpp  qmc.hpp
pySecDecContrib/util/tests/: Makefile.am  catch_amalgamated.cpp  catch_amalgamated.hpp  test_amplitude.cpp  test_coefficient_parser.cpp  test_cquad.cpp  test_cuba_integrators.cpp  test_deep_apply.cpp  test_ginac_coefficient_parser.cpp  test_integrand_container.cpp  test_integrator.cpp  test_qmc.cpp  test_series.cpp  test_uncertainties.cpp
pySecDecWorker/: __main__.py
secdecUtil/: .gitignore
secdecutil/: algorithm.hpp  configure.ac  series.hpp  uncertainties.hpp
singularity-container/: README  baseimage.def  build.sh  clear.sh  config.sh  daemon-start.sh  daemon-status.sh  daemon-stop.sh  run.sh  shell.sh
tests/: Makefile.am  test_algorithm.cpp  test_integration.cpp  test_series.cpp
util/: AUTHORS  Makefile.am  README  configure.ac
util/secdecutil/: algorithm.hpp  cuba.hpp  deep_apply.hpp  integrand_container.hpp  integration.hpp  pylink.hpp  sector_container.hpp  series.hpp  uncertainties.hpp
util/secdecutil/integrators/: cquad.hpp  cuba.hpp  integrator.hpp  qmc.hpp
util/tests/: Makefile.am  test_algorithm.cpp  test_cquad.cpp  test_cuba.cpp  test_cuba_integrators.cpp  test_deep_apply.cpp  test_integrand_container.cpp  test_integration.cpp  test_integrator.cpp  test_integrators.cpp  test_series.cpp  test_uncertainties.cpp
(+659 files in other folders)
