[project]
name = "pySecDec"
version = "1.4.5a1.dev6"

author = "Sophia Borowka, Gudrun Heinrich, Stephan Jahn, Stephen Jones, Matthias Kerner, Vitaly Magerya, Andres Poldaru, Johannes Schlenk, Tom Zirke"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = ["numpy>=1.6", "sympy>=0.7.6,!=1.7"]
description = 'Numerical evaluator of integrals implementing the "Sector Decomposition" method (see arXiv:1703.09692, arXiv:hep-ph/0004013, arXiv:0803.4177).'
license = "GPLv3"
readme = "README.md"
url = "https://github.com/gudrunhe/secdec"

[project.optional-dependencies]
testing = ["nose"]
documentation = ["sphinx>=1.6.3"]

[build-system]
requires = ["enscons>=0.26", "toml>=0.10", "packaging>=20.5"]
build-backend = "enscons.api"
