[project]
name = "pySecDec"
version = "1.6.1"

author = "Sophia Borowka, Gudrun Heinrich, Stephan Jahn, Stephen Jones, Matthias Kerner, Florian Langer, Vitaly Magerya, Anton Olsson, Andres Poldaru, Johannes Schlenk, Emilio Villa, Tom Zirke"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = ["numpy>=1.16", "sympy>=1.10.1,<1.11.0", "nest-asyncio"]
requires-python = ">=3.8"
description = 'Numerical evaluator of integrals implementing the "Sector Decomposition" method (arXiv:2305.19768, arXiv:2108.10807, arXiv:1703.09692, arXiv:hep-ph/0004013, arXiv:0803.4177).'
license = "GPLv3"
readme = "README.md"
url = "https://github.com/gudrunhe/secdec"

[project.optional-dependencies]
testing = ["pytest", "pytest-timeout", "pytest-cov"]
documentation = ["sphinx>=1.6.3"]

[build-system]
requires = ["enscons>=0.26", "toml>=0.10", "packaging>=20.5"]
build-backend = "enscons.api"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "active: marks test as active (deselect with '-m \"not active\"')",
]
