SUBDIRS = secdecutil tests
ACLOCAL_AMFLAGS = -I acinclude.d

nobase_include_HEADERS = secdecutil/series.hpp secdecutil/integrand_container.hpp secdecutil/sector_container.hpp secdecutil/pylink.hpp secdecutil/deep_apply.hpp secdecutil/uncertainties.hpp secdecutil/integrators/cuba.hpp secdecutil/integrators/integrator.hpp secdecutil/integrators/cquad.hpp secdecutil/integrators/qmc.hpp
